force-app/main/default/objects/Cleansing_Standardizing_Object__c/Cleansing_Standardizing_Object__c.object-meta.xml
<CustomObject>
    <description>For basic data hygiene data cleansing</description>
    <label>Cleansing-Standardizing Object</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Cleansing Object Nunber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cleansing-Standardizing Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>