force-app/main/default/objects/Cleansing_Standardizing_Object__c/fields/C_State__c.field-meta.xml
<CustomField>
    <fullName>C_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>C State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>