force-app/main/default/objects/Cleansing_Standardizing_Object__c/fields/M_City__c.field-meta.xml
<CustomField>
    <fullName>M_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>M City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>