force-app/main/default/objects/Cleansing_Standardizing_Object__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>